--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,33 @@
-*{
+* {
     margin: 0;
     padding: 0;
-    background-color: black;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+
+
+
+/* Header */
+header {
+    height: 150px;
+}
+
+.author{
+    height: 100%;
+    margin-left: 50px;
+}
+
+#logo {
+    width: 100px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.title {
+    font-size: 3rem;
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+    line-height: 150px;
 }
